# rl5-api-users-rust

./: .env  Cargo.toml
migrations/2023-12-12-052027_db-creation/: down.sql  up.sql
src/: auth.rs  db.rs  main.rs  model.rs  schema.rs  users.rs
