[package]
name = "api-users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = { version = "1.0.75", features = ["backtrace"] }
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.1"
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

actix-web = "4"
actix-web-httpauth = "0.8.1"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0.8.10"
config = { version = "0.13.4", features = [] }
